--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ https://www.cssmatic.com/box-shadow
 :root {
   --gap-number: 10px;
   --first-color: #00867c;
-  --secundary-color: #0771bd;
+  --secundary-color: #183852;
   --white-color: #fff;
   --text-color: #333;
-  --font-size: 11px;
-  --font-family: "Poppins", sans-serif;
+  --font-size: 14px;
+  --font-family: Arial, sans-serif;
   --border-radius: 15px;
   --box-shadow: 10px 10px 40px 1px rgba(0, 0, 0, 0.21);
 }
@@ -24,6 +24,15 @@ html {
   box-sizing: border-box;
   font-size: var(--font-size);
   font-family: var(--font-family);
+}
+
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  max-width: 1140px;
 }
 
 *,
@@ -61,7 +70,7 @@ body {
 }
 
 .content-wrap {
-  padding-top: 100px;
+  padding-top: 182px;
   position: relative;
 }
 
@@ -70,23 +79,96 @@ body {
   background-color: var(--first-color);
   height: 6px;
   display: block;
-  top: 94px;
+  top: 175px;
   position: absolute;
 }
 
-.content-wrap a {
+.fix-height {
+  height: 265px;
+}
+
+.fix-height a {
   text-decoration: underline;
   color: var(--text-color);
   font-weight: bold;
+}
+
+.icos {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.icos li {
+  margin-top: 30px;
+  width: 50%;
 }
 
 .form-head {
   background-color: var(--first-color);
   color: var(--white-color);
   text-align: center;
-  margin-top: 338px;
+  margin-top: 238px;
   line-height: 60px;
 }
+
+form {
+  accent-color: var(--first-color);
+}
+form label {
+  font-weight: bold;
+  display: block;
+}
+
+form span {
+  color: red;
+}
+
+form input[type="text"],
+form input[type="email"] {
+  display: block;
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 30px;
+}
+
+form .indent-check {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: 12px;
+}
+
+form .indent-check input[type="checkbox"] {
+  margin-right: 15px;
+  display: block;
+  margin-top: 4px;
+}
+
+form .indent-check label {
+  font-weight: normal !important;
+}
+
+form .indent-check label a {
+  color: var(--first-color);
+}
+
+form input[type="submit"] {
+  background-color: var(--secundary-color);
+  display: block;
+  text-align: center;
+  color: var(--white-color);
+  width: 100%;
+  border: 0;
+  line-height: 50px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
 /* Responsive */
 @media screen and (orientation: portrait) {
 }
